Fixed Welcome Image Issue on IPhones

--- a/app/components/Welcome/Welcome.module.scss
+++ b/app/components/Welcome/Welcome.module.scss
@@ -13,7 +13,6 @@
     flex: 1;
     color: var(--text-100);
     padding-top: 10vh;
-    pointer-events: none;
   }
 
   a {
